--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,73 +11,69 @@
     "name": "bts-flip-thru",
     "main": ".open-next/worker.js",
     "compatibility_date": "2025-12-01",
-    "compatibility_flags": [
-        "nodejs_compat",
-        "global_fetch_strictly_public"
-    ],
+    "compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
     "assets": {
         "binding": "ASSETS",
-        "directory": ".open-next/assets"
+        "directory": ".open-next/assets",
     },
     "images": {
         // Enable image optimization
         // see https://opennext.js.org/cloudflare/howtos/image
-        "binding": "IMAGES"
+        "binding": "IMAGES",
     },
     "services": [
         {
             // Self-reference service binding, the service name must match the worker name
             // see https://opennext.js.org/cloudflare/caching
             "binding": "WORKER_SELF_REFERENCE",
-            "service": "bts-flip-thru"
-        }
+            "service": "bts-flip-thru",
+        },
     ],
     "observability": {
-        "enabled": true
+        "enabled": true,
     },
     /**
-	 * Smart Placement
-	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
-	 */
+     * Smart Placement
+     * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
+     */
     // "placement": {  "mode": "smart" }
     /**
-	 * Bindings
-	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
-	 * databases, object storage, AI inference, real-time communication and more.
-	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
-	 */
+     * Bindings
+     * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
+     * databases, object storage, AI inference, real-time communication and more.
+     * https://developers.cloudflare.com/workers/runtime-apis/bindings/
+     */
     /**
-	 * Environment Variables
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-	 * Note: Use secrets to store sensitive data.
-	 * https://developers.cloudflare.com/workers/configuration/secrets/
-	 */
+     * Environment Variables
+     * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
+     * Note: Use secrets to store sensitive data.
+     * https://developers.cloudflare.com/workers/configuration/secrets/
+     */
     "routes": [
         {
             "pattern": "btsflipthru.com",
-            "custom_domain": true
+            "custom_domain": true,
         },
         {
             "pattern": "www.btsflipthru.com",
-            "custom_domain": true
-        }
+            "custom_domain": true,
+        },
     ],
     "d1_databases": [
         {
             "binding": "DB",
             "database_name": "prod",
-            "database_id": "d5dae721-28ea-4c49-9af0-3ac9e533da1c"
-        }
+            "database_id": "d5dae721-28ea-4c49-9af0-3ac9e533da1c",
+        },
     ],
     "r2_buckets": [
         {
             "binding": "images",
             "bucket_name": "images",
-        }
+        },
     ],
     "vars": {
         "BETTER_AUTH_URL": "https://btsflipthru.com",
         "GOOGLE_CLIENT_ID": "804677000168-flhn47sdilkqq1o9k9aiqk6dh1q8os0p.apps.googleusercontent.com",
-        "IMAGES_URL": "https://images.btsflipthru.com/"
-    }
+    },
 }
